--- a/TODO.txt
+++ b/TODO.txt
@@ -12,7 +12,7 @@ In progress:
 
 Wish:
 - Zagorje Kisovec - already has
-- Mostje
+- Mostje - no contact
 - Dobova - already has
 - Kočevje Novi Lazi - already has
 - Podpeč - already has
